--- a/CodeEditor/MainPage.xaml
+++ b/CodeEditor/MainPage.xaml
@@ -11,6 +11,7 @@
     <Page.Resources>
         <x:Double x:Key="NavFontSize">16</x:Double>
         <x:String x:Key="IconFontFamily">Segoe MDL2 Assets</x:String>
+        <x:String x:Key="EditorBackgroundColor">White</x:String>
 
         <x:Double x:Key="NavCloseWidth">50</x:Double>
         <x:Double x:Key="NavOpenWidth">200</x:Double>
@@ -35,9 +36,9 @@
 
         <SplitView Name="MySplitView" Grid.Row="1" DisplayMode="CompactOverlay" OpenPaneLength="{ StaticResource NavOpenWidth }" CompactPaneLength="{ StaticResource NavCloseWidth }" HorizontalAlignment="Stretch">
             <SplitView.Pane>
-                <ListBox SelectionMode="Single" Name="HamburgerMenu" SelectionChanged="HamburgerMenu_SelectionChanged">
-                    
-                    <ListBoxItem Name="Explorer">
+                <ListBox SelectionMode="Multiple" Name="HamburgerMenu" SelectionChanged="HamburgerMenu_SelectionChanged">
+
+                    <ListBoxItem Name="Explorer" IsSelected="True">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock FontFamily="{ StaticResource IconFontFamily }" FontSize="{ StaticResource NavFontSize }" Width="{ StaticResource NavCloseWidth }"  Margin="{ StaticResource IconMargin }" TextAlignment="Center" Text="&#xE71E;" />
                             <TextBlock Text="Explorer" FontSize="{ StaticResource NavFontSize }" Margin="{ StaticResource HamburgerOptionMargin }" />
@@ -64,12 +65,18 @@
             <SplitView.Content>
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" MinWidth="100" MaxWidth="150" />
+                        <ColumnDefinition Width="Auto" MaxWidth="150" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Grid x:Name="FileSelection" Grid.Column="0" />
-                    <Grid Grid.Column="1" Background="#dddddd">
-                        <TextBox Name="Editor" PlaceholderText="Select a file to begin editing!" AcceptsReturn="True" />
+                    <Grid x:Name="FileSelectionExplorer" Grid.Column="0" />
+                    <Grid Grid.Column="1">
+                        <TextBox Name="Editor" PlaceholderText="Select a file to begin editing!" AcceptsReturn="True">
+                            <TextBox.Resources>
+                                <SolidColorBrush x:Key="TextControlBackground" Color="{ StaticResource EditorBackgroundColor }" />
+                                <SolidColorBrush x:Key="TextControlBackgroundFocused" Color="{ StaticResource EditorBackgroundColor }" />
+                                <SolidColorBrush x:Key="TextControlBackgroundPointerOver" Color="{ StaticResource EditorBackgroundColor }" />
+                            </TextBox.Resources>
+                        </TextBox>
                     </Grid>
                 </Grid>
             </SplitView.Content>
